# q-orca-lang

./: .gitignore  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  orca.yaml.example  pyproject.toml
.github/workflows/: publish.yml  test.yml  verify-examples.yml
benchmarks/: README.md  gpu_vs_cpu.py  llm_evolution.py
benchmarks/qaoa/: scaling_sweep.py
benchmarks/qasm_examples/: README.md  qaoa_maxcut_12q.qasm  qaoa_maxcut_6q.qasm  vqe_heisenberg_8q.qasm
benchmarks/reports/: resource_usage.md
benchmarks/vqe/: scaling_sweep.py
demos/grover_evolve/: demo.py
demos/hybrid_quantum_controller/: controller.orca.md  demo.py
demos/larql_gate_knn/: demo.py
demos/larql_polysemantic_12/: demo.py
demos/larql_polysemantic_clusters/: demo.py
demos/larql_polysemantic_hierarchical/: demo.py
demos/qpc_convergence/: .gitignore  README.md  run.py
demos/quantum_evolve/: demo.py  evolve.orca.md
docs/: bridge-protocol.md  compute-needs.md
docs/language/: assertions.md  bounded-loops.md  noise-model.md  qubit-roles.md  resources.md  stabilizer-backend.md
docs/research/: concept-encoding-efficiency.md  dirac-rewriter-synthesis.md  polysemantic-encoding-beyond-product-states.md  proposal-larql-q-orca-polysemantic-pipeline.md  spec-bounded-loop-annotation.md  spec-hamiltonian-section.md  spec-machine-imports.md  spec-mid-circuit-measurement.md  spec-noise-model-section.md  spec-protocol-state-annotations.md  spec-quantum-predictive-coder.md  spec-qubit-role-types.md  spec-runtime-assertions.md  spec-stabilizer-fast-path-backend.md  spec-test-cases-section.md  spec-topology-section.md  spec-zx-calculus-optimization-pass.md
docs/specs/: spec-execution-backends.md  spec-parameterized-two-qubit-gates.md
examples/: active-teleportation.q.orca.md  bell-entangler-asserts.q.orca.md  bell-entangler.q.orca.md  bit-flip-code.q.orca.md  bit-flip-syndrome.q.orca.md  deutsch-jozsa.q.orca.md  ghz-state.q.orca.md  grover-search.q.orca.md  larql-animals-hierarchy.q.orca.md  larql-animals-interference.q.orca.md  larql-gate-knn-grover.q.orca.md  larql-hea-minimal.q.orca.md  larql-polysemantic-12.q.orca.md  larql-polysemantic-2.q.orca.md  larql-polysemantic-clusters.q.orca.md  larql-polysemantic-hierarchical.q.orca.md  predictive-coder-converging.q.orca.md  predictive-coder-learning.q.orca.md  predictive-coder-minimal.q.orca.md  qaoa-maxcut.q.orca.md  quantum-teleportation.q.orca.md  simons-algorithm.q.orca.md  vqe-heisenberg-noisy.q.orca.md  vqe-heisenberg.q.orca.md  vqe-rotation.q.orca.md
examples/hybrid-bridge/: README.md  forward.q.orca.md  run_demo.py  vqe-orchestrator.orca.md
openspec/roadmap/: coverage-analysis-v0.4.md
q_orca/: __init__.py  angle.py  ast.py  cli.py  effect_parser.py  mcp_server.py  noise.py  roles.py  skills.py  tools.py
q_orca/backends/: __init__.py  base.py  cudaq_backend.py  cuquantum_backend.py  qutip_backend.py  registry.py  stim_backend.py
q_orca/bridge/: __init__.py  dispatch.py  protocol.py
q_orca/compiler/: concept_gram.py  concept_gram_hea.py  concept_gram_mps.py  cudaq.py  loops.py  mermaid.py  mps_contract.py  parametric.py  qasm.py  qiskit.py  resources.py  stabilizer.py  util.py
q_orca/config/: __init__.py  loader.py  types.py
q_orca/evaluation/: __init__.py  qec.py  qpc.py
q_orca/llm/: __init__.py  anthropic.py  grok.py  ollama.py  openai.py  provider.py
q_orca/loader/: __init__.py  import_resolver.py
q_orca/parser/: markdown_parser.py
q_orca/runtime/: __init__.py  composed.py  context_ops.py  guards.py  iterative.py  python.py  types.py
q_orca/verifier/: __init__.py  _partial_trace.py  assertions.py  classical_context.py  completeness.py  composition.py  determinism.py  dynamic.py  hea_encoding.py  loops.py  noise_model.py  quantum.py  resources.py  roles.py  stabilizer_entanglement.py  structural.py  superposition.py  types.py
scripts/: nightly-prompt.txt  nightly.sh  pr-review-prompt.txt  pr-review.sh
tests/: conftest.py  test_active_teleportation.py  test_backends.py  test_bell_entangler.py  test_bell_pair_pipeline.py  test_benchmarks_importable.py  test_bit_flip_syndrome.py  test_bounded_loops.py  test_bridge_protocol.py  test_bug_fixes.py  test_compiler.py  test_composed_invoke.py  test_composed_runtime.py  test_concept_gram_mps_contraction.py  test_context_updates.py  test_deutsch_jozsa.py  test_effect_parser.py  test_examples.py  test_ghz.py  test_import_resolver.py  test_larql_gate_knn_grover.py  test_machine_imports.py  test_mcp_server.py  test_mid_circuit_measurement.py  test_noise_model_section.py  test_noise_models.py  test_parser.py  test_pipeline_bugs.py  test_predictive_coder_learning.py  test_predictive_coder_minimal.py  test_qaoa_maxcut.py  test_qpc_convergence.py  test_quantum_teleportation.py  test_qubit_roles.py  test_regression.py  test_reset_syntax.py  test_resource_estimation.py  test_run_context_updates.py  test_skills.py  test_stabilizer_backend.py  (+7 more)
tests/fixtures/: composed_predictive_coder.q.orca.md  effect_strings.py
(+229 files in other folders)
