[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q-orca"
dynamic = ["version"]
description = "Q-Orca — Quantum Orchestrated State Machine Language"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Allan" }
]
keywords = ["quantum", "state-machine", "qiskit", "qutip", "llm"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Code Generators",
]

[project.urls]
Homepage = "https://github.com/jascal/q-orca-lang"
Source = "https://github.com/jascal/q-orca-lang"
"Bug Tracker" = "https://github.com/jascal/q-orca-lang/issues"

[project.optional-dependencies]
dev = ["pytest", "ruff"]
quantum = ["qiskit", "qutip", "qutip-qip"]
mcp = ["pyyaml"]
all = ["qiskit", "qutip", "qutip-qip", "pyyaml"]

[project.scripts]
q-orca = "q_orca.cli:main"
q-orca-mcp = "q_orca.mcp_server:run"

[tool.hatch.version]
path = "q_orca/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["q_orca"]

[tool.ruff]
line-length = 100
